<resources>
    <string name="app_name">InClass08</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_expences_label">Current Expenses :</string>
    <string name="empty_list_label">There is no expence to show,Please add your expenses from the menu.</string>
    <string name="add_expence_title_label">Add an Expence</string>
    <string name="expence_name_label">Expence Name:</string>
    <string name="category_label">Category :</string>
    <string name="ex_amt_label">Amount :</string>
    <string name="add_ex_btn_label">Add expense</string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="show_ex_frag_title_label">Expense Details</string>
    <string name="show_name_label">Name :</string>
    <string name="show_cat_label">Category :</string>
    <string name="show_amt_label">Amount :</string>
    <string name="show_date_label">Date :</string>
    <string name="btn_close_label">Close</string>
    <string name="AddAnExpense">Add An Expense</string>
    <string name="ExpenseName">Expense Name</string>
    <string name="Category">Category</string>
    <string name="Amount">Amount</string>
    <string name="BAddExpense">Add Expense</string>
    <string name="bntCancel">Cancel</string>
    <string-array name = "seletcategory">
        <item>Select Category</item>
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>

</resources>
