<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uncc.edu.inclass08.ShowExpensesFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/show_ex_frag_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_ex_frag_title"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>

    <TextView
        android:text="@string/show_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_name_label"
        android:textSize="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/show_name_value"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="120dp"/>

    <TextView
        android:text="@string/show_cat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_cat_label"
        android:textSize="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/show_cat_value"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="120dp"/>

    <TextView
        android:text="@string/show_amt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_amt_label"
        android:textSize="15dp"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/show_amt_value"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="120dp"/>

    <TextView
        android:text="@string/show_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_date_label"
        android:textSize="15sp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/show_date_value"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="120dp"/>

    <Button
        android:text="@string/btn_close_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClose"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="150dp"/>

</FrameLayout>
